<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateProfile">

    <TextView
        android:id="@+id/updateProfileTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF3D00"
        android:paddingLeft="73dp"
        android:paddingTop="10dp"
        android:paddingBottom="8dp"
        android:drawableLeft="@drawable/profile"
        android:drawablePadding="20dp"
        android:gravity="center_vertical"
        android:inputType="textEmailAddress"
        android:text="@string/updateProfile"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateProfileEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_frame2"
        android:drawableLeft="@drawable/ic_baseline_email_orange_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FF3D00"
        android:textColorHint="#FF3D00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileTitle" />

    <EditText
        android:id="@+id/updateProfileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_frame2"
        android:drawableLeft="@drawable/ic_baseline_person_orange_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FF3D00"
        android:textColorHint="#FF3D00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileEmail" />

    <EditText
        android:id="@+id/updateProfilePhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/login_frame2"
        android:drawableLeft="@drawable/ic_baseline_local_phone_orange_24"
        android:drawablePadding="15dp"
        android:ems="10"
        android:hint="@string/phoneNumber"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingTop="13dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="#FF3D00"
        android:textColorHint="#FF3D00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateProfileName" />

    <Button
        android:id="@+id/saveChangesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/login_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>