<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:background="@drawable/loginbackground">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="#A8000000"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/Welcome"
        android:textColor="#FF3D00"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enjoy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:text="@string/enjoy"
        android:textColor="#FFFFFF"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:textSize="43sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/delicious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/delicious"
        android:textColor="#FF3D00"
        android:textStyle="bold"
        android:fontFamily="sans-serif-medium"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enjoy" />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="30dp"
        android:text="Get Started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@drawable/login_button"/>
</androidx.constraintlayout.widget.ConstraintLayout>